packages/jsii/test/negatives/namespaced/index.ts
export class Declaration {
  private constructor() { }
}
